<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.cache2k.benchmark</groupId>
  <artifactId>cache2k-benchmark-parent</artifactId>
  <version>0.22-SNAPSHOT</version>
  <name>Benchmarks: parent</name>

  <description>Benchmarking stuff for caches, not only useful for cache2k</description>
  <packaging>pom</packaging>
  <inceptionYear>2013</inceptionYear>
  <organization>
    <name>headissue GmbH, Munich</name>
    <url>http://headissue.com</url>
  </organization>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/headissue/cache2k-benchmark/issues</url>
  </issueManagement>
  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <cache2k-version>2.5.1.Alpha</cache2k-version>
    <ehcache3-version>3.9.6</ehcache3-version>
    <caffeine-version>3.0.5</caffeine-version>
    <dsiutils-version>2.6.0</dsiutils-version>
  </properties>

  <modules>
    <module>testbed</module>
    <module>util</module>
    <module>traces</module>
    <module>thirdparty</module>
    <module>jmh-suite</module>
    <module>clockProPlus</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <version>1.2.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>

    <!-- enable to use latest cache2k version -->
    <profile>
      <id>local-snapshosts</id>
      <properties>
        <cache2k-version>2.4-SNAPSHOT</cache2k-version>
      </properties>
    </profile>

    <profile>
      <id>benchmark</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
              <includes>
                <include>**/*Benchmark.java</include>
              </includes>
              <!-- don't reuse a spawned JVM, so different
                   implementation do not influence each other -->
              <reuseForks>false</reuseForks>
              <enableAssertions>false</enableAssertions>
              <!--
              <argLine>-verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseSerialGC</argLine>
              -->
              <systemProperties>
                <cache2k.benchmark.result.csv>${project.build.directory}/cache2k-benchmark-result.csv
                </cache2k.benchmark.result.csv>
              </systemProperties>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>1.5</version>
          <configuration>
            <licenseName>apache_v2</licenseName>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
